# CacaoSDK

./: *.sublime-workspace  .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  create
Documents/: InterfaceHistory.md
SDK/Include/helpers/: CMakeLists.txt  Result.hpp  VersionInfo.hpp  casts.hpp  conststring.hpp  file.hpp  general.hpp  include.hpp  map.hpp  platform.hpp  stream.hpp  string.hpp  timer.hpp  vector.hpp
Scratch/: cinnamon.mm  (+1 more)
Source/Cacao/: CMakeLists.txt  Cacao  Header.hpp  Interface.hpp  Source.cpp
Source/Cacao/API/: Cacao.cpp  Cacao.hpp
Source/Cacao/Base/: Base.hpp  FunctionBase.hpp  HeaderBase.hpp  InterfaceBase.hpp
Source/Cacao/Cinnamon/: CMakeLists.txt  Header.py  Interface.py  Lexer.py  Parser.py  Shared.py  Source.py
Source/Cacao/Cinnamon/MacOS/: Achievements.mm  Actions.mm  Cells.mm  CocosEntry.mm  Components.mm  Entry.mm  GameObjects.mm  InfoObjects.mm  Layers.mm  Managers.mm  Scenes.mm  Sprites.mm
Source/Cacao/Cinnamon/MacOS/Cocos/: BaseLayers.mm  BaseNodes.mm  BaseSprites.mm  Cocoa.mm  MenuNodes.mm
Source/Cacao/Compat/: gdstdlib.hpp
Source/Cacao/Compatibility/: gdstdlib.hpp
Source/Cacao/Core/: CMakeLists.txt  Core.cpp  Core.hpp  Core_.hpp  Route.cpp  Route.hpp
Source/Cacao/Core/MacOS/: CoreImplement.hpp
Source/Cacao/GDML/: GDML.cpp  GDML.hpp  lowLevel.cpp  lowLevel.hpp
Source/Cacao/Generation/: Header.py  Interface.py  Shared.py  Source.py  cinnamon.pickle
Source/Cacao/Generation/Cinnamon/: Lexer.py  Parser.py  cinnamon.pickle  parsetab.py
Source/Cacao/Generation/Cinnamon/MacOS/: BaseNodes.mm  Cocos2d.mm  Entry.mm  Layers.mm  Scenes.mm  Test.mm
Source/Cacao/Include/cocos2dx/cocoa/: CCObject.h
Source/Cacao/Include/cocos2dx/layers_scenes_transitions_nodes/: CCScene.h
Source/Cacao/Include/cocos2dx/platform/: CCFileUtils.h
Source/Cacao/api/: Cacao.cpp  Cacao.hpp  HandlerFixes.cpp
Source/Cacao/base/: Base.hpp  FunctionBase.hpp  HeaderBase.hpp  InterfaceBase.hpp  MacroBase.hpp  PlatformBase.hpp
Source/Cacao/cmake/: AndroidToolchain.cmake  CacaoAndroid.cmake  CacaoMac.cmake  CacaoMacOS.cmake  CacaoRoot.cmake  CacaoWin32.cmake  CacaoiOS.cmake
Source/Cacao/compat/: gdstdlib.hpp
Source/Cacao/core/: CMakeLists.txt  Core.cpp  Core.hpp
Source/Cacao/helpers/: Cacao.cpp  Cacao.hpp  HandlerFixes.cpp
Source/Cacao/hook/: CMakeLists.txt  Core.cpp  Core.hpp
Source/Cacao/include/cocos2dext/CocoStudio/GUI/Layouts/: UILayoutDefine.h
Source/Cacao/include/cocos2dext/GUI/CCControlExtension/: CCControlButton.h  CCControlHuePicker.h  CCControlSlider.h
Source/Cacao/include/cocos2dx/cocoa/: CCGeometry.h
Source/Cacao/include/cocos2dx/custom/Delegates/: CCKeyboardDelegate.h  CCMouseDelegate.h
Source/Cacao/include/cocos2dx/include/: ccTypes.h
Source/Cacao/include/cocos2dx/label_nodes/: CCLabelBMFont.h
Source/Cacao/include/cocos2dx/misc_nodes/: CCMotionStreak.h
Source/Cacao/include/cocos2dx/platform/: CCApplicationProtocol.h  CCEGLViewProtocol.h  CCPlatformMacros.h
Source/Cacao/old_stl/: gdstdlib.hpp
Source/Cacao/pkg/: Android.py  GeometryJump.smali  iOS.py
Template/: CMakeLists.txt  CacTemplate.sublime-project  control  main.cpp
Template/Cacao/: CMakeLists.txt
Template/Cacao/GDML/: CMakeLists.txt  GDML.hpp
Template/Cacao/include/: CacKit
Template/Cacao/include/cocos2dext/GUI/CCControlExtension/: CCControl.h
Template/Cacao/include/cocos2dx/: CCDirector.h
Template/Cacao/include/cocos2dx/cocoa/: CCGeometry.h
Template/Cacao/include/cocos2dx/platform/mac/: CCApplication.h
Template/Cacao/platform/macos/base/: symtab.begin.asm
Template/Cacao/platform/shared/: buildcardamom.py  buildccdefs.py
Template/Cacao/platform/shared/base/: cackit.begin.hpp
template/: .gitignore  CMakeLists.txt  CacTemplate.sublime-project  CacTemplate.sublime-workspace  main.cpp
template/Cacao/: CMakeLists.txt  Cacao.cpp  Cardamom.cpp  Makefile  cacnew.mm  cinnamon.mm  cocos_add.asm  symadd 2.asm  symadd.asm  symtab.asm  symtab2.asm  symtest.asm
template/Cacao/Auto/: buildasm.py  buildcackit.py  buildcackitnew.py  buildcackitsplit.py  cinnamon.mm  functions.txt  parsecac.py
template/Cacao/Auto/base/: cackit.begin.cpp  cackit.begin.hpp  cackit.end.hpp  cc_defs.begin.hpp  symtab.begin.asm  symtab.end.asm
template/Cacao/Cac/: asmtocackit.py  cackit.m  cackit.mm  cactest.mm
template/Cacao/CacKitGen/: asmgen.py  headergen.py  kitgen.py  source.mm
template/Cacao/CacKitGen/base/: cackit.begin.hpp  defs.begin.hpp  stubs.begin.asm  stubs.end.asm
template/Cacao/Cacao/include/: CacKit  cc_defs.hpp
template/Cacao/Cacao/include/GDML/: lowLevel.hpp
template/Cacao/Cacao/include/cocos2dx/cocoa/: CCGeometry.h
template/Cacao/GDML/: GDML.cpp  GDML.hpp  lowLevel.cpp  lowLevel.hpp
template/Cacao/Include/cocos2dx/sprite_nodes/: CCSpriteFrameCache.h
template/Cacao/Src/: Helpers.cpp  stubs.asm
template/Cacao/include/: CacKit  CacKit.cpp  CacKit.hpp  CacKitPlatform.hpp  CacUI.hpp  Cacao  Cacao.hpp  CackitMacros.hpp  Defs.hpp  Helpers.hpp  Platform_osx.hpp  cc_defs.hpp  cc_macros.hpp
template/Cacao/include/cocos2dext/CocoStudio/Json/rapidjson/: document.h
template/Cacao/include/cocos2dext/GUI/CCControlExtension/: CCControlSaturationBrightnessPicker.h
template/Cacao/include/cocos2dx/: CCDirector.h
template/Cacao/include/cocos2dx/base_nodes/: CCNode.h
template/Cacao/include/cocos2dx/cocoa/: CCArray.h  CCDictionary.h  CCObject.h
template/Cacao/include/cocos2dx/keyboard_dispatcher/: CCKeyboardDelegate.h  CCKeyboardDispatcher.h
template/Cacao/include/cocos2dx/platform/: CCPlatformMacros.h
template/Cacao/include/cocos2dx/sprite_nodes/: CCSprite.h
template/Cacao/include/cocos2dx/support/component/: CCComponentContainer.h
template/Cacao/include/cocos2dx/textures/: CCTexture2D.h
template/Cacao/include/cocos2dx/touch_dispatcher/: CCTouchDispatcher.h
template/Cacao/include/stl_compat/: libstdcpp.h
template/Cacao/platform/macos/: buildasm.py  parsecac.py
template/Cacao/platform/shared/: buildcardamom.py  buildccdefs.py  parsecac.py
template/Cacao/platform/shared/base/: cc_defs.begin.hpp
(+131 files in other folders)
